# gqe-bench

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
benchmark/: tpch_q15.py  tpch_q17.py  tpch_q18.py  tpch_q21.py  tpch_q6.py
config_templates/: tpch_sf100_clustered_by_month.json5  tpch_sf1k_gb200_clustered_by_month.json5  tpch_sweep_CI.json5  tpch_sweep_CI_multigpu.json5
database_benchmarking_tools/: ABOUT.md  README.md  pyproject.toml
database_benchmarking_tools/database_benchmarking_tools/: __init__.py  experiment.py  hardware_info.py  sql_generator.py  utility.py
database_benchmarking_tools/database_benchmarking_tools/sql/: create_experiment_db.sql
database_benchmarking_tools/diagrams/: GQE_experiment_tables.drawio
database_benchmarking_tools/tests/: test_transaction.py
docs/: catalog.rst  conf.py  execute.rst  expression.rst  index.rst  install.rst  relation.rst
gqe/: __init__.py  calculate_memory.cpp  calculate_memory.py  catalog.py  execute.py  expression.py  lib.cpp  optimization_parameters.py  param_sweep_config.py  relation.py  substrait_producer.py  table_definition.py  table_definitions.hpp  tpch_sweep_config.template.json5  type.py
gqe/benchmark/: create_experiment_db.sql  gqe_experiment.py  query.py  run.py  run_parameter_sweep.py  run_pretuned.py  run_tpch.py  run_tpch_e2e.py  run_tpch_parameter_sweep.py  run_tpch_pretuned.py  system_under_test.sql  tpch_q1.py  tpch_q10.py  tpch_q10_fused_filter.py  tpch_q10_opt.py  tpch_q11.py  tpch_q12.py  tpch_q12_shuffle.py  tpch_q13.py  tpch_q13_fused.py  tpch_q13_opt.py  tpch_q15.py  tpch_q16.py  tpch_q16_opt.py  tpch_q17.py  tpch_q18.py  tpch_q18_opt.py  tpch_q19.py  tpch_q2.py  tpch_q20.py  tpch_q20_fused_filter.py  tpch_q21.py  tpch_q21_fused_filter.py  tpch_q21_opt.py  tpch_q22.py  tpch_q22_opt.py  tpch_q2_fused_filter.py  tpch_q3.py  tpch_q3_fused_filter.py  tpch_q4.py  (+7 more)
gqe/benchmark/hardcoded/bindings/: tpch_q10.py  tpch_q13.py  tpch_q16.py  tpch_q21.py
gqe/benchmark/hardcoded/include/tpch/q10/: fused_probes.cuh  fused_probes_task.hpp  sort_limit_task.hpp  unique_key_inner_join.cuh  unique_key_inner_join_task.hpp
gqe/benchmark/hardcoded/include/tpch/q13/: filter_orders_task.hpp  groupjoin_task.hpp  kernels.cuh
gqe/benchmark/hardcoded/include/tpch/q16/: fused_filter_join.cuh  task.hpp
gqe/benchmark/hardcoded/include/tpch/q18/: groupby.cuh  groupby_task.hpp
gqe/benchmark/hardcoded/include/tpch/q21/: mark_join.cuh  task.hpp
gqe/benchmark/hardcoded/include/tpch/q22/: fused_project_filter.cuh  mark_join.cuh  task.hpp
gqe/benchmark/hardcoded/include/utility/: config.hpp  groupjoin.cuh  hash_map_cache.hpp  mark_join.cuh  unique_key_inner_join.cuh  utility.hpp  write_buffer.cuh
gqe/benchmark/hardcoded/src/tpch/q10/: fused_probes.cu  fused_probes_task.cu  sort_limit_task.cu  unique_key_inner_join.cu  unique_key_inner_join_task.cu
gqe/benchmark/hardcoded/src/tpch/q13/: filter_orders_task.cu  groupjoin_task.cu  kernels.cu
gqe/benchmark/hardcoded/src/tpch/q16/: aggregate_task.cu  fused_filter_join.cu  join_task.cu
gqe/benchmark/hardcoded/src/tpch/q18/: groupby_task.cu
gqe/benchmark/hardcoded/src/tpch/q21/: mark_join.cu  mark_join_task.cu
gqe/benchmark/hardcoded/src/tpch/q22/: fused_project_filter.cu  mark_join.cu  task.cu
gqe_bench/: __init__.py  calculate_memory.py  catalog.py  execute.py  expression.py  lib.cpp  optimization_parameters.py  param_sweep_config.py  relation.py  table_definition.py  type.py
gqe_bench/benchmark/: gqe_experiment.py  query.py  run.py  run_parameter_sweep.py  run_pretuned.py  run_types.py  sandboxing.py  system_under_test.sql  tpch_q1.py  tpch_q10.py  tpch_q10_fused_filter.py  tpch_q10_opt.py  tpch_q11.py  tpch_q12.py  tpch_q12_shuffle.py  tpch_q13.py  tpch_q13_fused.py  tpch_q13_opt.py  tpch_q15.py  tpch_q16.py  tpch_q16_opt.py  tpch_q17.py  tpch_q18.py  tpch_q18_opt.py  tpch_q19.py  tpch_q2.py  tpch_q20.py  tpch_q20_fused_filter.py  tpch_q21.py  tpch_q21_fused_filter.py  tpch_q21_opt.py  tpch_q22.py  tpch_q22_opt.py  tpch_q2_fused_filter.py  tpch_q3.py  tpch_q3_fused_filter.py  tpch_q4.py  tpch_q5.py  tpch_q6.py  tpch_q7.py  (+2 more)
gqe_bench/benchmark/hardcoded/bindings/: tpch_q10.py  tpch_q13.py  tpch_q16.py  tpch_q21.py
gqe_bench/benchmark/hardcoded/include/tpch/q10/: fused_probes_task.hpp  sort_limit_task.hpp  unique_key_inner_join_task.hpp
gqe_bench/benchmark/hardcoded/include/tpch/q13/: groupjoin_task.hpp  kernels.cuh
gqe_bench/benchmark/hardcoded/include/tpch/q18/: groupby_task.hpp
gqe_bench/benchmark/hardcoded/include/utility/: groupjoin.cuh  hash_map_cache.hpp
gqe_bench/benchmark/hardcoded/src/tpch/q10/: fused_probes.cu  fused_probes_task.cu  sort_limit_task.cu
gqe_bench/benchmark/hardcoded/src/tpch/q13/: filter_orders_task.cu  groupjoin_task.cu  kernels.cu
gqe_bench/benchmark/hardcoded/src/tpch/q16/: fused_filter_join.cu
gqe_bench/benchmark/hardcoded/src/tpch/q21/: mark_join.cu
gqe_bench/benchmark/hardcoded/src/tpch/q22/: fused_project_filter.cu  task.cu
licenses/: LICENSE.gqe.txt  LICENSE.json5.txt  LICENSE.pandas.txt  LICENSE.pyarrow.txt  LICENSE.pybind11.txt  LICENSE.pynvml.txt  LICENSE.sqlglot.txt
scripts/: generate_parquet_dataset.py  generate_validation_files.py  nsys_analysis.py
tests/: conftest.py  test_custom_table_definitions.py  test_experiment_tables.py  test_experiment_views.py  test_json_config.py  test_sql_views.py
