# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES.
# All rights reserved. SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "gqe"
version = "0.0.1"
description = "GPU Query Executor (GQE)"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "json5",
    "database-benchmarking-tools",
    "nvidia-ml-py",
    "pandas",
    "pyarrow",
    "nvtx",
    "sqlglot>=23.0.0"
]

# override dependency sources
[tool.uv.sources]
database_benchmarking_tools = { path = "database_benchmarking_tools" }

[tool.scikit-build]
cmake.source-dir = "."
cmake.verbose = true
install.strip=false

[project.scripts]
gqe-run-parameter-sweep = "gqe.benchmark.run_parameter_sweep:main"
gqe-run-pretuned = "gqe.benchmark.run_pretuned:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment
    "F541",   # f-string missing placeholders
]

[tool.ruff.lint.per-file-ignores]
"gqe/__init__.py" = ["F401"]  # unused imports in __init__ are intentional
